<resources>
    <string name="app_name">InventoryApp</string>

    <!-- Login Screen -->
    <string name="login_title">Inventory Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="create_account_button_text">Create Account / Register</string>
    <string name="action_logout">Logout</string>

    <!-- Inventory List Screen -->
    <string name="inventory_list_title">Warehouse Inventory</string>
    <string name="add_item_fab_content_description">Add new inventory item</string>
    <string name="item_name_header">Item Name</string>
    <string name="item_sku_header">SKU</string>
    <string name="item_quantity_header">Qty</string>
    <string name="item_actions_header">Actions</string>
    <string name="delete_item_button_content_description">Delete item</string>
    <string name="edit_item_button_content_description">Edit item quantity/details</string>
    <string name="no_items_to_display">No inventory items to display. Tap \'+\' to add.</string>


    <!-- Add/Edit Item Screen -->
    <string name="add_item_title">Add New Item</string>
    <string name="edit_item_title">Edit Item</string>
    <string name="item_name_label">Item Name*</string>
    <string name="item_sku_label">SKU (Stock Keeping Unit)*</string>
    <string name="item_description_label">Description</string>
    <string name="item_quantity_label">Current Quantity*</string>
    <string name="item_unit_label">Unit of Measure (e.g., pcs, kg, box)</string>
    <string name="item_location_label">Warehouse Location</string>
    <string name="save_item_button_text">Save Item</string>
    <string name="required_field_indicator">*</string>

    <!-- SMS Permissions & Notifications -->
    <string name="sms_permission_rationale_title">SMS Permission Needed</string>
    <string name="sms_permission_rationale_message">This app uses SMS to notify you about low inventory. Please grant SMS permission to enable this feature.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="low_inventory_notification_title">Low Inventory Alert!</string>
    <string name="low_inventory_notification_text">Item %1$s (%2$s) is low on stock (%3$d remaining).</string>
    <string name="zero_inventory_notification_text">Item %1$s (%2$s) is out of stock!</string>

</resources>